--- a/templates/actions-panel.hbs
+++ b/templates/actions-panel.hbs
@@ -2,6 +2,64 @@
 
 	<style>
 
+		.fxmaster-groups-list,
+		.fxmaster-list {
+			overflow-y: auto;
+			padding: 0;
+			margin: 0;
+		}
+
+		.fxmaster-groups-list__item,
+		.fxmaster-list__item {
+			padding: 4px;
+			list-style: none;
+		}
+
+		.fxmaster-groups-list__item {
+			border-bottom: 2px solid var(--color-border-dark-3, #333);
+		}
+
+		.fxmaster-list__item {
+			border-bottom: 1px solid var(--color-border-dark-3, #333);
+		}
+
+		.fxmaster-groups-list__item:last-of-type,
+		.fxmaster-list__item:last-of-type {
+			border-bottom: none;
+		}
+
+		.fxmaster-groups-list__collapse,
+		.fxmaster-list__collapse {
+			font-size: var(--font-size-16, 16px);
+			cursor: pointer;
+			text-indent: 5px;
+		}
+
+		.fxmaster-groups-list__collapse:hover,
+		.fxmaster-list__collapse:hover {
+			text-shadow: 0 0 4px var(--color-shadow-primary, #ff0000);
+		}
+
+		.fxmaster-groups-list__collapsible,
+		.fxmaster-list__collapsible {
+			overflow: hidden;
+			padding: 0;
+			margin: 0;
+		}
+
+		.fxmaster-groups-list__collapsible--collapsed,
+		.fxmaster-list__collapsible--collapsed {
+			display: none;
+		}
+
+		.fxmaster-list__icon {
+			border: none;
+			flex: 0 0 18px;
+			text-align: center;
+			line-height: var(--line-height-20, 20px);
+			font-size: var(--font-size-16, 16px);
+		}
+
 		.effects-container {
 			height: 100%;
 			width: 100%;
@@ -160,7 +218,29 @@
 
 	<section id="actions-panel-tabs" class="content">
 		<div class="tab effects-container" data-tab="encounter" data-group="actions-panel">
-			Encounter
+			<ol class="fxmaster-groups-list">
+				{{#each weatherEffectGroups as |group groupId|}}
+					<li class="fxmaster-groups-list__item">
+						<header class="flexrow">
+							<label class="fxmaster-groups-list__collapse">{{localize group.label}}
+								<i class="fxmaster-groups-list__collapse-icon fa fa-angle-{{#if group.expanded}}down{{else}}up{{/if}}"></i>
+							</label>
+						</header>
+						<ol	class="fxmaster-groups-list__collapsible{{#unless group.expanded}} fxmaster-groups-list__collapsible--collapsed{{/unless}} fxmaster-list">
+							{{#each group.effects as |effect type|}}
+								<li class="fxmaster-list__item">
+									<header class="flexrow">
+										{{#if effect.icon}}
+											<img class="fxmaster-list__icon" width="24" height="24" src="{{effect.icon}}">
+										{{/if}}
+										<a data-action="seek">{{localize effect.label}} <i class="fas fa-bolt"></i></a>
+									</header>
+								</li>
+							{{/each}}
+						</ol>
+					</li>
+				{{/each}}
+			</ol>
 		</div>
 		<div class="tab effects-container" data-tab="exploration" data-group="actions-panel">
 			Exploration
