--- a/templates/actions-panel.hbs
+++ b/templates/actions-panel.hbs
@@ -2,6 +2,60 @@
 
 	<style>
 
+		.mks-list {
+			overflow-y: auto;
+			padding: 0;
+			margin: 0;
+		}
+
+		.mks-list__item {
+			padding: 4px;
+			list-style: none;
+			border-bottom: 2px solid var(--color-border-dark-3, #333);
+		}
+
+		.mks-noborder {
+			border-bottom: none;
+		}
+
+		.mks-list__item:last-of-type {
+			border-bottom: none;
+		}
+
+		.mks-list__collapse {
+			font-size: var(--font-size-16, 16px);
+			cursor: pointer;
+			text-indent: 5px;
+			color: darkorange;
+		}
+
+		.mks-list__collapse:hover {
+			text-shadow: 0 0 4px #460750;
+		}
+
+		.mks-list__collapsible {
+			overflow: hidden;
+			padding: 0;
+			margin: 0;
+		}
+
+		.mks-list__collapsible--collapsed {
+			display: none;
+		}
+
+		.mks-list__icon {
+			border: none;
+			flex: 0 0 18px;
+			text-align: center;
+			line-height: var(--line-height-20, 20px);
+			font-size: var(--font-size-16, 16px);
+		}
+
+		.mks-list__link {
+			font-size: var(--font-size-20, 20px);
+			text-indent: 5px;
+		}
+
 		.fxmaster-groups-list,
 		.fxmaster-list {
 			overflow-y: auto;
@@ -218,22 +272,22 @@
 
 	<section id="actions-panel-tabs" class="content">
 		<div class="tab effects-container" data-tab="encounter" data-group="actions-panel">
-			<ol class="fxmaster-groups-list">
-				{{#each weatherEffectGroups as |group groupId|}}
-					<li class="fxmaster-groups-list__item">
+			<ol class="mks-list">
+				{{#each actions as |tag|}}
+					<li class="mks-list__item">
 						<header class="flexrow">
-							<label class="fxmaster-groups-list__collapse">{{localize group.label}}
-								<i class="fxmaster-groups-list__collapse-icon fa fa-angle-{{#if group.expanded}}down{{else}}up{{/if}}"></i>
+							<label class="mks-list__collapse">{{tag.label}}
+								<i class="mks-list__collapse-icon fa fa-angle-{{#if tag.expanded}}down{{else}}up{{/if}}"></i>
 							</label>
 						</header>
-						<ol	class="fxmaster-groups-list__collapsible{{#unless group.expanded}} fxmaster-groups-list__collapsible--collapsed{{/unless}} fxmaster-list">
-							{{#each group.effects as |effect type|}}
-								<li class="fxmaster-list__item">
+						<ol	class="mks-list__collapsible{{#unless group.expanded}} mks-list__collapsible--collapsed{{/unless}} mks-list">
+							{{#each tag.methods as |method|}}
+								<li class="mks-list__item mks-noborder">
 									<header class="flexrow">
-										{{#if effect.icon}}
-											<img class="fxmaster-list__icon" width="24" height="24" src="{{effect.icon}}">
+										{{#if method.icon}}
+											<img class="mks-list__icon" width="24" height="24" src="{{method.icon}}">
 										{{/if}}
-										<a data-action="seek">{{localize effect.label}} <i class="fas fa-bolt"></i></a>
+										<a data-action="seek" class="mks-list__link">{{method.label}} <i class="fas fa-caret-right"></i></a>
 									</header>
 								</li>
 							{{/each}}
