--- a/templates/actions-panel.hbs
+++ b/templates/actions-panel.hbs
@@ -56,6 +56,14 @@
 			text-indent: 5px;
 		}
 
+		.mks-footer {
+			padding: 5px;
+		}
+
+		.mks-checkbox {
+			background-color: #2196F3;
+		}
+
 		.fxmaster-groups-list,
 		.fxmaster-list {
 			overflow-y: auto;
@@ -272,6 +280,18 @@
 
 	<section id="actions-panel-tabs" class="content">
 		<div class="tab effects-container" data-tab="encounter" data-group="actions-panel">
+			<div class="form-group">
+				<label><span>{{localize "PF2E.MKS.ActionsPanel.ShowApplicable"}}</span></label>
+				<div class="form-fields">
+					<input type="checkbox" name="{{localize "PF2E.MKS.ActionsPanel.ShowApplicable"}}" id="showApplicable" {{bindAttr checked="showApplicable"}} />
+				</div>
+			</div>
+			<div class="form-group">
+				<label><span>{{localize "PF2E.MKS.ActionsPanel.InCombatTurn"}}</span></label>
+				<div class="form-fields">
+					<input type="checkbox" name="{{localize "PF2E.MKS.ActionsPanel.InCombatTurn"}}" id="inCombatTurn" {{bindAttr checked="inCombatTurn"}} />
+				</div>
+			</div>
 			<ol class="mks-list">
 				{{#each actions as |tag|}}
 					<li class="mks-list__item">
@@ -295,6 +315,13 @@
 					</li>
 				{{/each}}
 			</ol>
+<!--			<footer class="mks-footer">-->
+<!--				<hr/>-->
+<!--				<label for="showApplicable">{{localize "PF2E.MKS.ActionsPanel.ShowApplicable"}}</label>-->
+<!--				<input class="mks-checkbox" type="checkbox" name="{{localize "PF2E.MKS.ActionsPanel.ShowApplicable"}}" id="showApplicable" {{bindAttr checked="showApplicable"}} />-->
+<!--				<label for="inCombatTurn">{{localize "PF2E.MKS.ActionsPanel.InCombatTurn"}}</label>-->
+<!--				<input class="mks-checkbox" type="checkbox" name="{{localize "PF2E.MKS.ActionsPanel.InCombatTurn"}}" id="inCombatTurn" {{bindAttr checked="inCombatTurn"}} />-->
+<!--			</footer>-->
 		</div>
 		<div class="tab effects-container" data-tab="exploration" data-group="actions-panel">
 			Exploration
