--- a/templates/actions-panel.hbs
+++ b/templates/actions-panel.hbs
@@ -146,7 +146,7 @@
 										{{#if method.icon}}
 											<img class="mks-list__icon" width="24" height="24" src="{{method.icon}}">
 										{{/if}}
-										<a data-action="{{method.action}}" data-method="{{method.method}}" class="mks-list__link">{{method.label}} <i class="fas fa-caret-right"></i></a>
+										<a data-action="{{method.action}}" data-method="{{method.method}}" class="mks-list__link">{{method.label}} {{#if (ne method.action 'rudimentary')}}<i class="fas fa-caret-right"></i>{{/if}}</a>
 									</header>
 								</li>
 							{{/each}}
