Encounter action impl. completed

--- a/templates/actions-panel.hbs
+++ b/templates/actions-panel.hbs
@@ -22,35 +22,13 @@
 					<input type="checkbox" class="mks-checkbox" name="{{localize "PF2E.MKS.ActionsPanel.InCombatTurn"}}" id="inCombatTurn" {{#if inCombatTurn}}checked{{/if}} />
 				</div>
 			</div>
-			<ol class="mks-list">
-				{{#each actions as |tag|}}
-					<li class="mks-list__item">
-						<header class="flexrow">
-							<label class="mks-list__collapse">{{tag.label}}
-								<i class="mks-list__collapse-icon fa fa-angle-{{#if tag.expanded}}down{{else}}up{{/if}}"></i>
-							</label>
-						</header>
-						<ol	class="mks-list__collapsible{{#unless tag.expanded}} mks-list__collapsible--collapsed{{/unless}} mks-list" id="{{tag.tag}}">
-							{{#each tag.methods as |method|}}
-								<li class="mks-list__item mks-noborder">
-									<header class="flexrow">
-										{{#if method.icon}}
-											<img class="mks-list__icon" width="24" height="24" src="{{method.icon}}">
-										{{/if}}
-										<a data-action="{{method.action}}" data-method="{{method.method}}" class="mks-list__link">{{method.label}} {{#if (ne method.action 'rudimentary')}}<i class="fas fa-caret-right"></i>{{/if}}</a>
-									</header>
-								</li>
-							{{/each}}
-						</ol>
-					</li>
-				{{/each}}
-			</ol>
+			{{> actions-list}}
 		</div>
 		<div class="tab effects-container" data-tab="exploration" data-group="actions-panel">
-			Exploration
+			{{> actions-list}}
 		</div>
 		<div class="tab effects-container" data-tab="downtime" data-group="actions-panel">
-			Downtime
+			{{> actions-list}}
 		</div>
 	</section>
 
