equipments-panel completed

--- a/templates/actions-panel.hbs
+++ b/templates/actions-panel.hbs
@@ -1,4 +1,4 @@
-<form id="sequencer-effects-form" class="dialog-content" onsubmit="event.preventDefault();" autocomplete="off">
+<form id="sequencer-effects-form" class="dialog-content" autocomplete="off">
 
 	<nav class="sheet-tabs tabs mb-1" data-group="actions-panel">
 		<a class="item active mks-active-tab mks-mr10" data-tab="encounter"><i class="fas fa-fist-raised"></i> {{ localize "PF2E.TabActionsEncounterLabel" }}</a>
